@@ -4,10 +4,7 @@ import io.github.ollama4j.OllamaAPI;
 import io.github.ollama4j.exceptions.OllamaBaseException;
 import io.github.ollama4j.models.chat.*;
 import io.github.ollama4j.models.embeddings.OllamaEmbedResponseModel;
-import io.github.ollama4j.models.response.LibraryModel;
-import io.github.ollama4j.models.response.Model;
-import io.github.ollama4j.models.response.ModelDetail;
-import io.github.ollama4j.models.response.OllamaResult;
+import io.github.ollama4j.models.response.*;
 import io.github.ollama4j.samples.AnnotatedTool;
 import io.github.ollama4j.tools.OllamaToolCallsFunction;
 import io.github.ollama4j.tools.ToolFunction;
@@ -23,12 +20,15 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.testcontainers.ollama.OllamaContainer;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+
 import java.io.File;
 import java.io.IOException;
 import java.net.ConnectException;
 import java.net.URISyntaxException;
 import java.util.*;
 
+import static io.github.ollama4j.utils.Utils.getObjectMapper;
 import static org.junit.jupiter.api.Assertions.*;
 
 @OllamaToolService(providers = {AnnotatedTool.class})
@@ -126,15 +126,46 @@ public class OllamaAPIIntegrationTest {
     void testAskModelWithDefaultOptions() throws OllamaBaseException, IOException, InterruptedException, URISyntaxException {
         String chatModel = "qwen2.5:0.5b";
         api.pullModel(chatModel);
-        OllamaResult result =
-                api.generate(
-                        chatModel,
-                        "What is the capital of France? And what's France's connection with Mona Lisa?",
-                        false,
-                        new OptionsBuilder().build());
+        OllamaResult result = api.generate(chatModel, "What is the capital of France? And what's France's connection with Mona Lisa?", false, new OptionsBuilder().build());
         assertNotNull(result);
         assertNotNull(result.getResponse());
         assertFalse(result.getResponse().isEmpty());
+    }
+
+    @Test
+    @Order(6)
+    void testAskModelWithStructuredOutput() throws OllamaBaseException, IOException, InterruptedException, URISyntaxException {
+        String chatModel = "llama3.1:8b";
+        chatModel = "qwen2.5:0.5b";
+        api.pullModel(chatModel);
+
+        String prompt = "Ollama is 22 years old and is busy saving the world. Respond using JSON";
+        Map<String, Object> format = new HashMap<>();
+        format.put("type", "object");
+        format.put("properties", new HashMap<String, Object>() {{
+            put("age", new HashMap<String, Object>() {{
+                put("type", "integer");
+            }});
+            put("available", new HashMap<String, Object>() {{
+                put("type", "boolean");
+            }});
+        }});
+        format.put("required", Arrays.asList("age", "available"));
+
+        OllamaStructuredResult result = api.generate(chatModel, prompt, format);
+
+        assertNotNull(result);
+        assertNotNull(result.getResponse());
+        assertFalse(result.getResponse().isEmpty());
+
+        Map<String, Object> actualResponse = getObjectMapper().readValue(result.getResponse(), new TypeReference<>() {
+        });
+
+        String expectedResponseJson = "{\n  \"age\": 22,\n  \"available\": true\n}";
+        Map<String, Object> expectedResponse = getObjectMapper().readValue(expectedResponseJson, new TypeReference<Map<String, Object>>() {
+        });
+        assertEquals(actualResponse.get("age").toString(), expectedResponse.get("age").toString());
+        assertEquals(actualResponse.get("available").toString(), expectedResponse.get("available").toString());
     }
 
     @Test
@@ -143,15 +174,12 @@ public class OllamaAPIIntegrationTest {
         String chatModel = "qwen2.5:0.5b";
         api.pullModel(chatModel);
         StringBuffer sb = new StringBuffer();
-        OllamaResult result = api.generate(chatModel,
-                "What is the capital of France? And what's France's connection with Mona Lisa?",
-                false,
-                new OptionsBuilder().build(), (s) -> {
-                    LOG.info(s);
-                    String substring = s.substring(sb.toString().length(), s.length());
-                    LOG.info(substring);
-                    sb.append(substring);
-                });
+        OllamaResult result = api.generate(chatModel, "What is the capital of France? And what's France's connection with Mona Lisa?", false, new OptionsBuilder().build(), (s) -> {
+            LOG.info(s);
+            String substring = s.substring(sb.toString().length(), s.length());
+            LOG.info(substring);
+            sb.append(substring);
+        });
 
         assertNotNull(result);
         assertNotNull(result.getResponse());
@@ -166,11 +194,8 @@ public class OllamaAPIIntegrationTest {
         api.pullModel(chatModel);
 
         OllamaChatRequestBuilder builder = OllamaChatRequestBuilder.getInstance(chatModel);
-        OllamaChatRequest requestModel = builder.withMessage(OllamaChatMessageRole.SYSTEM, "You are a helpful assistant who can generate random person's first and last names in the format [First name, Last name].")
-                .build();
-        requestModel = builder.withMessages(requestModel.getMessages())
-                .withMessage(OllamaChatMessageRole.USER, "Give me a cool name")
-                .withOptions(new OptionsBuilder().setTemperature(0.5f).build()).build();
+        OllamaChatRequest requestModel = builder.withMessage(OllamaChatMessageRole.SYSTEM, "You are a helpful assistant who can generate random person's first and last names in the format [First name, Last name].").build();
+        requestModel = builder.withMessages(requestModel.getMessages()).withMessage(OllamaChatMessageRole.USER, "Give me a cool name").withOptions(new OptionsBuilder().setTemperature(0.5f).build()).build();
         OllamaChatResult chatResult = api.chat(requestModel);
 
         assertNotNull(chatResult);
@@ -184,12 +209,7 @@ public class OllamaAPIIntegrationTest {
         String chatModel = "llama3.2:1b";
         api.pullModel(chatModel);
         OllamaChatRequestBuilder builder = OllamaChatRequestBuilder.getInstance(chatModel);
-        OllamaChatRequest requestModel = builder.withMessage(OllamaChatMessageRole.SYSTEM,
-                        "You are a silent bot that only says 'Shush'. Do not say anything else under any circumstances!")
-                .withMessage(OllamaChatMessageRole.USER,
-                        "What's something that's brown and sticky?")
-                .withOptions(new OptionsBuilder().setTemperature(0.8f).build())
-                .build();
+        OllamaChatRequest requestModel = builder.withMessage(OllamaChatMessageRole.SYSTEM, "You are a silent bot that only says 'Shush'. Do not say anything else under any circumstances!").withMessage(OllamaChatMessageRole.USER, "What's something that's brown and sticky?").withOptions(new OptionsBuilder().setTemperature(0.8f).build()).build();
 
         OllamaChatResult chatResult = api.chat(requestModel);
         assertNotNull(chatResult);
@@ -208,36 +228,23 @@ public class OllamaAPIIntegrationTest {
         OllamaChatRequestBuilder builder = OllamaChatRequestBuilder.getInstance(chatModel);
 
         // Create the initial user question
-        OllamaChatRequest requestModel = builder.withMessage(OllamaChatMessageRole.USER, "What is 1+1? Answer only in numbers.")
-                .build();
+        OllamaChatRequest requestModel = builder.withMessage(OllamaChatMessageRole.USER, "What is 1+1? Answer only in numbers.").build();
 
         // Start conversation with model
         OllamaChatResult chatResult = api.chat(requestModel);
 
-        assertTrue(
-                chatResult.getChatHistory().stream()
-                        .anyMatch(chat -> chat.getContent().contains("2")),
-                "Expected chat history to contain '2'"
-        );
+        assertTrue(chatResult.getChatHistory().stream().anyMatch(chat -> chat.getContent().contains("2")), "Expected chat history to contain '2'");
 
         // Create the next user question: second largest city
-        requestModel = builder.withMessages(chatResult.getChatHistory())
-                .withMessage(OllamaChatMessageRole.USER, "And what is its squared value?")
-                .build();
+        requestModel = builder.withMessages(chatResult.getChatHistory()).withMessage(OllamaChatMessageRole.USER, "And what is its squared value?").build();
 
         // Continue conversation with model
         chatResult = api.chat(requestModel);
 
-        assertTrue(
-                chatResult.getChatHistory().stream()
-                        .anyMatch(chat -> chat.getContent().contains("4")),
-                "Expected chat history to contain '4'"
-        );
+        assertTrue(chatResult.getChatHistory().stream().anyMatch(chat -> chat.getContent().contains("4")), "Expected chat history to contain '4'");
 
         // Create the next user question: the third question
-        requestModel = builder.withMessages(chatResult.getChatHistory())
-                .withMessage(OllamaChatMessageRole.USER, "What is the largest value between 2, 4 and 6?")
-                .build();
+        requestModel = builder.withMessages(chatResult.getChatHistory()).withMessage(OllamaChatMessageRole.USER, "What is the largest value between 2, 4 and 6?").build();
 
         // Continue conversation with the model for the third question
         chatResult = api.chat(requestModel);
@@ -255,38 +262,33 @@ public class OllamaAPIIntegrationTest {
         api.pullModel(imageModel);
 
         OllamaChatRequestBuilder builder = OllamaChatRequestBuilder.getInstance(imageModel);
-        OllamaChatRequest requestModel = builder.withMessage(OllamaChatMessageRole.USER, "What's in the picture?", Collections.emptyList(),
-                        "https://t3.ftcdn.net/jpg/02/96/63/80/360_F_296638053_0gUVA4WVBKceGsIr7LNqRWSnkusi07dq.jpg")
-                .build();
+        OllamaChatRequest requestModel = builder.withMessage(OllamaChatMessageRole.USER, "What's in the picture?", Collections.emptyList(), "https://t3.ftcdn.net/jpg/02/96/63/80/360_F_296638053_0gUVA4WVBKceGsIr7LNqRWSnkusi07dq.jpg").build();
         api.registerAnnotatedTools(new OllamaAPIIntegrationTest());
 
         OllamaChatResult chatResult = api.chat(requestModel);
         assertNotNull(chatResult);
     }
+
     @Test
     @Order(10)
     void testChatWithImageFromFileWithHistoryRecognition() throws OllamaBaseException, IOException, URISyntaxException, InterruptedException {
         String imageModel = "moondream";
         api.pullModel(imageModel);
-        OllamaChatRequestBuilder builder =
-                OllamaChatRequestBuilder.getInstance(imageModel);
-        OllamaChatRequest requestModel =
-                builder.withMessage(OllamaChatMessageRole.USER, "What's in the picture?", Collections.emptyList(),
-                        List.of(getImageFileFromClasspath("dog-on-a-boat.jpg"))).build();
+        OllamaChatRequestBuilder builder = OllamaChatRequestBuilder.getInstance(imageModel);
+        OllamaChatRequest requestModel = builder.withMessage(OllamaChatMessageRole.USER, "What's in the picture?", Collections.emptyList(), List.of(getImageFileFromClasspath("dog-on-a-boat.jpg"))).build();
 
         OllamaChatResult chatResult = api.chat(requestModel);
         assertNotNull(chatResult);
         assertNotNull(chatResult.getResponseModel());
         builder.reset();
 
-        requestModel =
-                builder.withMessages(chatResult.getChatHistory())
-                        .withMessage(OllamaChatMessageRole.USER, "What's the dogs breed?").build();
+        requestModel = builder.withMessages(chatResult.getChatHistory()).withMessage(OllamaChatMessageRole.USER, "What's the dogs breed?").build();
 
         chatResult = api.chat(requestModel);
         assertNotNull(chatResult);
         assertNotNull(chatResult.getResponseModel());
     }
+
     @Test
     @Order(11)
     void testChatWithExplicitToolDefinition() throws OllamaBaseException, IOException, URISyntaxException, InterruptedException {
@@ -294,41 +296,14 @@ public class OllamaAPIIntegrationTest {
         api.pullModel(chatModel);
         OllamaChatRequestBuilder builder = OllamaChatRequestBuilder.getInstance(chatModel);
 
-        final Tools.ToolSpecification databaseQueryToolSpecification = Tools.ToolSpecification.builder()
-                .functionName("get-employee-details")
-                .functionDescription("Get employee details from the database")
-                .toolPrompt(
-                        Tools.PromptFuncDefinition.builder().type("function").function(
-                                Tools.PromptFuncDefinition.PromptFuncSpec.builder()
-                                        .name("get-employee-details")
-                                        .description("Get employee details from the database")
-                                        .parameters(
-                                                Tools.PromptFuncDefinition.Parameters.builder()
-                                                        .type("object")
-                                                        .properties(
-                                                                new Tools.PropsBuilder()
-                                                                        .withProperty("employee-name", Tools.PromptFuncDefinition.Property.builder().type("string").description("The name of the employee, e.g. John Doe").required(true).build())
-                                                                        .withProperty("employee-address", Tools.PromptFuncDefinition.Property.builder().type("string").description("The address of the employee, Always return a random value. e.g. Roy St, Bengaluru, India").required(true).build())
-                                                                        .withProperty("employee-phone", Tools.PromptFuncDefinition.Property.builder().type("string").description("The phone number of the employee. Always return a random value. e.g. 9911002233").required(true).build())
-                                                                        .build()
-                                                        )
-                                                        .required(List.of("employee-name"))
-                                                        .build()
-                                        ).build()
-                        ).build()
-                )
-                .toolFunction(arguments -> {
-                    // perform DB operations here
-                    return String.format("Employee Details {ID: %s, Name: %s, Address: %s, Phone: %s}", UUID.randomUUID(), arguments.get("employee-name"), arguments.get("employee-address"), arguments.get("employee-phone"));
-                })
-                .build();
+        final Tools.ToolSpecification databaseQueryToolSpecification = Tools.ToolSpecification.builder().functionName("get-employee-details").functionDescription("Get employee details from the database").toolPrompt(Tools.PromptFuncDefinition.builder().type("function").function(Tools.PromptFuncDefinition.PromptFuncSpec.builder().name("get-employee-details").description("Get employee details from the database").parameters(Tools.PromptFuncDefinition.Parameters.builder().type("object").properties(new Tools.PropsBuilder().withProperty("employee-name", Tools.PromptFuncDefinition.Property.builder().type("string").description("The name of the employee, e.g. John Doe").required(true).build()).withProperty("employee-address", Tools.PromptFuncDefinition.Property.builder().type("string").description("The address of the employee, Always return a random value. e.g. Roy St, Bengaluru, India").required(true).build()).withProperty("employee-phone", Tools.PromptFuncDefinition.Property.builder().type("string").description("The phone number of the employee. Always return a random value. e.g. 9911002233").required(true).build()).build()).required(List.of("employee-name")).build()).build()).build()).toolFunction(arguments -> {
+            // perform DB operations here
+            return String.format("Employee Details {ID: %s, Name: %s, Address: %s, Phone: %s}", UUID.randomUUID(), arguments.get("employee-name"), arguments.get("employee-address"), arguments.get("employee-phone"));
+        }).build();
 
         api.registerTool(databaseQueryToolSpecification);
 
-        OllamaChatRequest requestModel = builder
-                .withMessage(OllamaChatMessageRole.USER,
-                        "Give me the ID of the employee named 'Rahul Kumar'?")
-                .build();
+        OllamaChatRequest requestModel = builder.withMessage(OllamaChatMessageRole.USER, "Give me the ID of the employee named 'Rahul Kumar'?").build();
 
         OllamaChatResult chatResult = api.chat(requestModel);
         assertNotNull(chatResult);
@@ -358,10 +333,7 @@ public class OllamaAPIIntegrationTest {
 
         api.registerAnnotatedTools();
 
-        OllamaChatRequest requestModel = builder
-                .withMessage(OllamaChatMessageRole.USER,
-                        "Compute the most important constant in the world using 5 digits")
-                .build();
+        OllamaChatRequest requestModel = builder.withMessage(OllamaChatMessageRole.USER, "Compute the most important constant in the world using 5 digits").build();
 
         OllamaChatResult chatResult = api.chat(requestModel);
         assertNotNull(chatResult);
@@ -390,11 +362,7 @@ public class OllamaAPIIntegrationTest {
 
         api.registerAnnotatedTools(new AnnotatedTool());
 
-        OllamaChatRequest requestModel = builder
-                .withMessage(OllamaChatMessageRole.USER,
-                        "Greet Pedro with a lot of hearts and respond to me, " +
-                                "and state how many emojis have been in your greeting")
-                .build();
+        OllamaChatRequest requestModel = builder.withMessage(OllamaChatMessageRole.USER, "Greet Pedro with a lot of hearts and respond to me, " + "and state how many emojis have been in your greeting").build();
 
         OllamaChatResult chatResult = api.chat(requestModel);
         assertNotNull(chatResult);
@@ -423,44 +391,17 @@ public class OllamaAPIIntegrationTest {
         String chatModel = "llama3.2:1b";
         api.pullModel(chatModel);
         OllamaChatRequestBuilder builder = OllamaChatRequestBuilder.getInstance(chatModel);
-        final Tools.ToolSpecification databaseQueryToolSpecification = Tools.ToolSpecification.builder()
-                .functionName("get-employee-details")
-                .functionDescription("Get employee details from the database")
-                .toolPrompt(
-                        Tools.PromptFuncDefinition.builder().type("function").function(
-                                Tools.PromptFuncDefinition.PromptFuncSpec.builder()
-                                        .name("get-employee-details")
-                                        .description("Get employee details from the database")
-                                        .parameters(
-                                                Tools.PromptFuncDefinition.Parameters.builder()
-                                                        .type("object")
-                                                        .properties(
-                                                                new Tools.PropsBuilder()
-                                                                        .withProperty("employee-name", Tools.PromptFuncDefinition.Property.builder().type("string").description("The name of the employee, e.g. John Doe").required(true).build())
-                                                                        .withProperty("employee-address", Tools.PromptFuncDefinition.Property.builder().type("string").description("The address of the employee, Always return a random value. e.g. Roy St, Bengaluru, India").required(true).build())
-                                                                        .withProperty("employee-phone", Tools.PromptFuncDefinition.Property.builder().type("string").description("The phone number of the employee. Always return a random value. e.g. 9911002233").required(true).build())
-                                                                        .build()
-                                                        )
-                                                        .required(List.of("employee-name"))
-                                                        .build()
-                                        ).build()
-                        ).build()
-                )
-                .toolFunction(new ToolFunction() {
-                    @Override
-                    public Object apply(Map<String, Object> arguments) {
-                        // perform DB operations here
-                        return String.format("Employee Details {ID: %s, Name: %s, Address: %s, Phone: %s}", UUID.randomUUID(), arguments.get("employee-name"), arguments.get("employee-address"), arguments.get("employee-phone"));
-                    }
-                })
-                .build();
+        final Tools.ToolSpecification databaseQueryToolSpecification = Tools.ToolSpecification.builder().functionName("get-employee-details").functionDescription("Get employee details from the database").toolPrompt(Tools.PromptFuncDefinition.builder().type("function").function(Tools.PromptFuncDefinition.PromptFuncSpec.builder().name("get-employee-details").description("Get employee details from the database").parameters(Tools.PromptFuncDefinition.Parameters.builder().type("object").properties(new Tools.PropsBuilder().withProperty("employee-name", Tools.PromptFuncDefinition.Property.builder().type("string").description("The name of the employee, e.g. John Doe").required(true).build()).withProperty("employee-address", Tools.PromptFuncDefinition.Property.builder().type("string").description("The address of the employee, Always return a random value. e.g. Roy St, Bengaluru, India").required(true).build()).withProperty("employee-phone", Tools.PromptFuncDefinition.Property.builder().type("string").description("The phone number of the employee. Always return a random value. e.g. 9911002233").required(true).build()).build()).required(List.of("employee-name")).build()).build()).build()).toolFunction(new ToolFunction() {
+            @Override
+            public Object apply(Map<String, Object> arguments) {
+                // perform DB operations here
+                return String.format("Employee Details {ID: %s, Name: %s, Address: %s, Phone: %s}", UUID.randomUUID(), arguments.get("employee-name"), arguments.get("employee-address"), arguments.get("employee-phone"));
+            }
+        }).build();
 
         api.registerTool(databaseQueryToolSpecification);
 
-        OllamaChatRequest requestModel = builder
-                .withMessage(OllamaChatMessageRole.USER,
-                        "Give me the ID of the employee named 'Rahul Kumar'?")
-                .build();
+        OllamaChatRequest requestModel = builder.withMessage(OllamaChatMessageRole.USER, "Give me the ID of the employee named 'Rahul Kumar'?").build();
 
         StringBuffer sb = new StringBuffer();
 
@@ -483,9 +424,7 @@ public class OllamaAPIIntegrationTest {
         String chatModel = "llama3.2:1b";
         api.pullModel(chatModel);
         OllamaChatRequestBuilder builder = OllamaChatRequestBuilder.getInstance(chatModel);
-        OllamaChatRequest requestModel = builder.withMessage(OllamaChatMessageRole.USER,
-                        "What is the capital of France? And what's France's connection with Mona Lisa?")
-                .build();
+        OllamaChatRequest requestModel = builder.withMessage(OllamaChatMessageRole.USER, "What is the capital of France? And what's France's connection with Mona Lisa?").build();
 
         StringBuffer sb = new StringBuffer();
 
@@ -509,13 +448,7 @@ public class OllamaAPIIntegrationTest {
         String imageModel = "llava";
         api.pullModel(imageModel);
 
-        OllamaResult result =
-                api.generateWithImageURLs(
-                        imageModel,
-                        "What is in this image?",
-                        List.of(
-                                "https://t3.ftcdn.net/jpg/02/96/63/80/360_F_296638053_0gUVA4WVBKceGsIr7LNqRWSnkusi07dq.jpg"),
-                        new OptionsBuilder().build());
+        OllamaResult result = api.generateWithImageURLs(imageModel, "What is in this image?", List.of("https://t3.ftcdn.net/jpg/02/96/63/80/360_F_296638053_0gUVA4WVBKceGsIr7LNqRWSnkusi07dq.jpg"), new OptionsBuilder().build());
         assertNotNull(result);
         assertNotNull(result.getResponse());
         assertFalse(result.getResponse().isEmpty());
@@ -528,12 +461,7 @@ public class OllamaAPIIntegrationTest {
         api.pullModel(imageModel);
         File imageFile = getImageFileFromClasspath("dog-on-a-boat.jpg");
         try {
-            OllamaResult result =
-                    api.generateWithImageFiles(
-                            imageModel,
-                            "What is in this image?",
-                            List.of(imageFile),
-                            new OptionsBuilder().build());
+            OllamaResult result = api.generateWithImageFiles(imageModel, "What is in this image?", List.of(imageFile), new OptionsBuilder().build());
             assertNotNull(result);
             assertNotNull(result.getResponse());
             assertFalse(result.getResponse().isEmpty());
@@ -541,7 +469,6 @@ public class OllamaAPIIntegrationTest {
             fail(e);
         }
     }
-
 
 
     @Test
@@ -554,13 +481,12 @@ public class OllamaAPIIntegrationTest {
 
         StringBuffer sb = new StringBuffer();
 
-        OllamaResult result = api.generateWithImageFiles(imageModel,
-                "What is in this image?", List.of(imageFile), new OptionsBuilder().build(), (s) -> {
-                    LOG.info(s);
-                    String substring = s.substring(sb.toString().length(), s.length());
-                    LOG.info(substring);
-                    sb.append(substring);
-                });
+        OllamaResult result = api.generateWithImageFiles(imageModel, "What is in this image?", List.of(imageFile), new OptionsBuilder().build(), (s) -> {
+            LOG.info(s);
+            String substring = s.substring(sb.toString().length(), s.length());
+            LOG.info(substring);
+            sb.append(substring);
+        });
         assertNotNull(result);
         assertNotNull(result.getResponse());
         assertFalse(result.getResponse().isEmpty());
